--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!doctype html>
+<html lang="ko">
+  <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
+    <title>가위바위보 게임</title>
+  </head>
+  <body>
+    <h1>가위바위보 게임</h1>
+    <form method="post" action="/">
+      <label for="user">가위, 바위, 보 중 하나를 입력해주세요:</label>
+      <select id="user" name="user">
+        <option value="가위">가위</option>
+        <option value="바위">바위</option>
+        <option value="보">보</option>
+      </select>
+      <button type="submit">확인</button>
+    </form>
+    <p>{{ message }}</p>
+    <p>{{ cont_win }}승 {{ cont_lose }}패 {{ cont_draw }}무 입니다.</p>
+  </body>
 </html>
